--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,18 @@
 services:
   postgres:
     image: postgres:15
+    container_name: chatbot_postgres
     ports:
       - 5432:5432
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
-      POSTGRES_DB: user_db
+      POSTGRES_DB: chatbot_db
     volumes:
       - postgres_data:/var/lib/postgresql/data
   chromadb:
     image: chromadb/chroma:latest
+    container_name: chatbot_chromadb
     ports:
       - 8100:8000
     volumes:
