--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,8 +1,7 @@
 [pytest]
 asyncio_mode = auto
-testpaths = tests
+testpaths = backend/tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-pythonpath = .
-
+pythonpath = backend
